--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.7", features = ["json", "macros"] }
+chrono = { version = "0.4.42", features = ["serde"] }
 dotenvy = "0.15.7"
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
+uuid = "1.18.1"
